# orgchart

./: .gitattributes  .gitignore  DESIGN.md  README.md  [필독] 실행이 안 될 때 - 압축을 먼저 푸세요.txt  pyproject.toml  run_mac.command  run_windows.bat
.github/workflows/: build-windows.yml
Output/: README.md
Output/Templates/: 조직도_빈템플릿.xlsx
Output/mac/: README.md
Output/windows/: README.md
app/: config.py
app/chart/: layout.py
app/db/: repository.py  session.py
app/domain/: __init__.py  hr.py
app/exporter/: excel_exporter.py
app/importer/: excel_importer.py  sample_files.py
app/ui/: chart_view.py  icons.py  main_window.py  styles.py
design_review/: critique.md
dev/: DESIGN.md  README-dev.md  audit_findings.md  pyproject.toml  run_mac.command  run_windows.bat
dev/app/: main.py
dev/app/db/: models.py  session.py
dev/app/db/migrations/: env.py
dev/app/importer/: sample_files.py
dev/app/ui/: dialogs.py  main_window.py
dev/packaging/: org-chart-studio.spec  version_info.txt
dev/resources/icons/: app.icns
dev/scripts/: _shot.py
dev/tests/: test_chart_scene.py  test_import_ux.py  test_launchers.py  test_main.py  test_repository.py
dev/tests/fixtures/: 03_conflict_hr.xlsx
packaging/: org-chart-studio.spec
resources/fonts/: NOTICE.md
sample_inputs/: 인사정보_샘플.csv  인사정보_샘플.json
scripts/: _shot.py  render_sample_chart_png.py
tests/: test_audit_data_fixes.py  test_audit_export_layout_fixes.py  test_chart_scene.py  test_dialogs.py  test_exporters_and_display.py  test_import_export_roundtrip.py  test_launchers.py  test_layout.py  test_ui_features.py
tests/fixtures/: 01_initial_hr.xlsx
결과물(Output)/: README.md
결과물(Output)/mac/: README.md
결과물(Output)/windows/: README.md
결과물(Output)/샘플양식(Templates)/: 조직도_표준템플릿.xlsx
실행관리(Ops-Run)/: README-dev.md  alembic.ini
실행관리(Ops-Run)/app/: __init__.py
실행관리(Ops-Run)/app/chart/: __init__.py  (+2 more)
실행관리(Ops-Run)/scripts/: create_sample_excels.py
실행관리(Ops-Run)/tests/: test_audit_ui_fixes.py  test_launchers.py  test_repository_ops.py  test_template_hierarchy.py  test_ui_features.py
(+7 files in other folders)
